load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "wizard_proto",
    srcs = ["wizard.proto"],
)

go_proto_library(
    name = "wizard_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/example/project/wizard",
    proto = ":wizard_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "wizard",
    embed = [":wizard_go_proto"],
    importpath = "github.com/example/project/wizard",
    visibility = ["//visibility:public"],
)
