load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/nazufel/wizter/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//wizard",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "binary",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)


# go_image(
#     name = "image",
#     binary = "//cmd/client:binary",
#     visibility = ["//visibility:public"],
# )

container_image(
    name = "image",
    base = "@alpine_linux_amd64//image",
    entrypoint = ["/binary"],
    files = [":binary"],
)